--- a/jobs/gorouter/templates/gorouter.yml.erb
+++ b/jobs/gorouter/templates/gorouter.yml.erb
@@ -173,6 +173,7 @@ params = {
   'pid_file' => '/var/vcap/sys/run/gorouter/gorouter.pid',
   'ip_local_port_range' => p('router.ip_local_port_range'),
   'empty_pool_response_code_503' => p('for_backwards_compatibility_only.empty_pool_response_code_503'), # backwards compatibility only section
+  'enable_envelope_v1_metrics' => p('router.enable_envelope_v1_metrics'),
   'per_request_metrics_reporting' => p('router.per_request_metrics_reporting'),
   'per_app_prometheus_http_metrics_reporting' => p('router.per_app_prometheus_http_metrics_reporting'),
   'send_http_start_stop_server_event' => p('router.send_http_start_stop_server_event'),
@@ -182,6 +183,7 @@ params = {
 
 if_p('router.prometheus.port') do |port|
   params['prometheus'] = {
+    'enabled' => true,
     'port' => port,
     'cert_path' => '/var/vcap/jobs/gorouter/config/certs/prometheus/prometheus.crt',
     'key_path' => '/var/vcap/jobs/gorouter/config/certs/prometheus/prometheus.key',
